--- a/vignettes/Suggested_plantTracker_Workflow.Rmd
+++ b/vignettes/Suggested_plantTracker_Workflow.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Suggested PlantTracker Workflow"
 author: Alice Stears
-date: 9 July 2021
+date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Suggested_PlantTracker_Workflow}
@@ -60,22 +60,22 @@ epithet for each observation. This column must be a character data type. The
 function expects this column to be called 'Species', but a different name can be 
 specified in function calls. 
 
-*  ... have a column that contains character strings indicating the site at which 
-each observation was collected. This is a level of classification 'above' the 
-quadrat (i.e. all quadrats measured at the Central Plains Experimental Range in 
-Nunn, CO might have the value "CO" in this column). This column must be a 
+*  ... have a column that contains character strings indicating the site at 
+which each observation was collected. This is a level of classification 'above' 
+the quadrat (i.e. all quadrats measured at the Central Plains Experimental Range 
+in Nunn, CO might have the value "CO" in this column). This column must be a 
 character data type. The function expects this column to be called 'Site', but a 
 different name can be specified in function calls. 
 
-*  ... have a column that contains character strings indicating the quadrat at which 
-each observation was collected. This column must be a character data type. The 
-function expects this column to be called 'Quad', but a different name can be 
-specified in function calls. 
+*  ... have a column that contains character strings indicating the quadrat at 
+which each observation was collected. This column must be a character data type.
+The function expects this column to be called 'Quad', but a different name can 
+be specified in function calls. 
 
-*  ... have a column that contains a value indicating the year when this individual 
-observation was collected. This must be a numeric data type, and must be either 
-a four or two digit year number. The function expects this column to be called 
-'Year', but a different name can be specified in function calls. 
+*  ... have a column that contains a value indicating the year when this
+individual observation was collected. This must be a numeric data type, and must 
+be either a four or two digit year number. The function expects this column to 
+be called 'Year', but a different name can be specified in function calls. 
 
 *  ... have a column (almost always called 'geometry' in the `sf` package data 
 format) that contains a polygon representing the location of each observation.
@@ -88,8 +88,8 @@ identical radius. If you do this transformation, we also recommend that you
 include a column that indicates whether each row was originally mapped as a 
 polygon or a point, since the demographic data that deals with size will be
 relatively meaningless for observations originally mapped as points. 
-    +   'dat' does not need to have a coordinate reference system (i.e. CRS can be 
-'NA'), but it can have one if you'd like. 
+    +   'dat' does not need to have a coordinate reference system (i.e. CRS can 
+    be 'NA'), but it can have one if you'd like. 
 
 *  ... *not* have columns called 'neighbors', 'nearEdge',  'trackID', 'age', 
 'size_tplus1', 'recruit', 'survives_tplus1', 'basalArea_ramet', or 
@@ -114,11 +114,12 @@ the ride" in any analysis using PlantTracker functions.
 
 Here's what some of the example 'dat' data (from the 'SG2' quadrat at the 
 'AZ' site in 1922) look like when plotted spatially:    
-```{r echo = FALSE,  fig.width=6, fig.align = 'center', fig.cap = "**Figure 1.1**: Spatial map of a subset of example 'dat' dataset"}
+```{r echo = FALSE,  fig.width=8, fig.align = 'center', fig.cap = "**Figure 1.1**: Spatial map of a subset of example 'dat' dataset"}
 exampleDat <- grasslandData[grasslandData$Site == "AZ" & 
                               grasslandData$Quad == "SG2" & 
                               grasslandData$Year == 1922, ]
-
+dat <- grasslandData[grasslandData$Site == "AZ" & 
+                              grasslandData$Quad == "SG2",]
 ggplot(data = exampleDat) +
   geom_sf(aes(color = Species, fill = Species)) +
   geom_segment(aes(x = 0, xend = 1, y = 0, yend = 0), size = .5, 
@@ -157,7 +158,7 @@ argument above. The quadrats that have data in 'dat' are "ungz_5a", "unun_11",
 "SG2", and "SG4",  so there are elements in 'inv' that 
 correspond to each of these quadrats. 
 ```{r echo=FALSE, fig.align='center'}
-grasslandInventory[c("ungz_5a", "unun_11", "SG2", "SG4")]
+(inv <- grasslandInventory[c("ungz_5a", "unun_11", "SG2", "SG4")])
 ```
 **Figure 1.2**: An example of the 'inv' argument
 
@@ -165,21 +166,20 @@ grasslandInventory[c("ungz_5a", "unun_11", "SG2", "SG4")]
 #### *1.3* Checking the 'inv' and 'dat' arguments  
 This step is optional, but can be useful if you're unsure whether your 'dat' and 
 'inv' arguments are in the correct format. The PlantTracker function 
-`checkDat()` takes 'dat' and 'inv' as arguments for the arguments `dat` and `inv`, 
-and will return informative error messages if either argument is not in the 
-correct format. 
+`checkDat()` takes 'dat' and 'inv' as arguments for the arguments `dat` and
+`inv`, and will return informative error messages if either argument is not in 
+the correct format. 
 
 Additional optional arguments to `checkDat()` are 'species', 'site', 'quad', 
 'year', 'geometry', and 'reformatDat'. 
 
 * `species/site/quad/year/geometry`: These arguments only need to be included if 
-the columns in 'dat' that contain the data that indicates the species, site, 
+the columns in 'dat' that contain the data for species, site, 
 quadrat, year and geometry of each observation are *different* from the names 
 "Species", "Site", "Quad", "Year, and "geometry".  For example, if the column in 
-your version of 'dat' that contains the character strings that identify the 
-species identity of each observation is called 'species_names', then the 
-argument `species = "species_names"` must be included in your call 
-to `checkDat()`. 
+your version of 'dat' that contains the species identity of each observation is 
+called 'species_names', then the argument `species = "species_names"` must be 
+included in your call to `checkDat()`. 
 
 * `reformatDat` is a TRUE/FALSE argument that determines whether you want the 
 `checkDat()` function to return a version of 'dat' that is ready to go into the 
@@ -199,7 +199,10 @@ next year, age, and some additional potentially-useful demographic data. It does
 this by comparing quadrat maps from sequential years. If there is overlap of 
 individuals of the same species in consecutive years, then the rows in 'dat' 
 that contain data for those overlapping individuals are given the same 
-'trackID', or unique identifier. `checkDat()` takes the following arguments:  
+'trackID', or unique identifier. 
+
+#### *2.1.* Function Arguments
+`trackSpp()` takes the following arguments:  
 
 * `dat` This is the sf data.frame that we've been calling 'dat' so far. This 
 must be in the correct format (which you can check before-hand using 
@@ -234,7 +237,7 @@ scenario, in years 3 and 4 there are not polygons of species 'A' that are in the
 same location as our focal individual, but there is a polygon in year 4 that 
 overlaps our focal individual. If `dorm = 1`, then our focal individual would 
 get a 0 for survival, but if `dorm = 2`, then it would get a 1 for survival. 
-```{r echo = FALSE, fig.width=6, fig.align = 'center', fig.cap = "**Figure 2.1**: A visualization of the 'dormancy' scenario described above."}
+```{r echo = FALSE, fig.width=8, fig.align = 'center', fig.cap = "**Figure 2.1**: A visualization of the 'dormancy' scenario described above."}
 exampleSmall <- exampleDat[unique(c(30, 42, 44, 25,  2, 61, 59, 52, 45,  8, 42, 37, 60, 34, 45, 38, 26, 49, 52, 46)),]
 
 exampleSmall$FocalInd <- 'other individual'
@@ -303,7 +306,7 @@ data in 'dat' is measured in meters, and you want to allow a plant to 'move'
 `buff = .15` in your call to `trackSpp()`. If you want to allow no movement, use 
 `buff = 0`. Below is a visualization of two different `buff` scenarios.
 
-```{r echo = FALSE, warning= FALSE, fig.width=8, fig.align = 'center', fig.cap = "**Figure 2.2**: With a 10 cm buffer, these polygons in 1922 and 1923 overlap and will be identified by trackSpp() as the same individual and receive the same trackID."}
+```{r echo = FALSE, warning= FALSE, fig.width=8, fig.align = 'center', fig.cap = "**Figure 2.2**: With a 10 cm buffer, these polygons in 1922 and 1923 overlap and will be identified by trackSpp() as the *same* individual and receive the same trackID."}
 
 exampleDat <- grasslandData[grasslandData$Site == "AZ" & 
                               grasslandData$Quad == "SG2" & 
@@ -349,7 +352,7 @@ ggplot(data = exampleDatIDs
   scale_linetype_manual(values=c("twodash", "solid", "dotted"))
 ```  
 
-```{r echo = FALSE, warning= FALSE, fig.width=8, fig.align = 'center', fig.cap = "**Figure 2.3**: With a 3 cm buffer, these polygons in 1922 and 1923 don't quite overlap, so will be identified by trackSpp() as different individuals and receive different trackIDs."}
+```{r echo = FALSE, warning= FALSE, fig.width=8, fig.align = 'center', fig.cap = "**Figure 2.3**: With a 3 cm buffer, these polygons in 1922 and 1923 don't quite overlap, so will be identified by trackSpp() as *different* individuals and receive different trackIDs."}
 
 exampleBuffed <- st_buffer(exampleDatIDsTemp[round(exampleDatIDsTemp$Area, 7) ==0.0005472,], dist = .03)
 exampleBuffed$Year <- 1922
@@ -416,7 +419,7 @@ value which will be applied to all species present in 'dat', or can be specified
 uniquely for each species by creating a data.frame that contains a `buffGenet` 
 argument for each species (analogous to the data.frame for the `dorm` argument 
 shown in Table 2.1, but with a column called "buffGenet").
-
+,,k,k 
 * `aggregateByGenet` is a logical argument that is only required if `clonal = 1` 
 or if `clonal` is a data.frame that contains at least a single '1' in the 
 "clonal" column. This argument determines whether the output data.frame from 
@@ -442,5 +445,84 @@ ramets instead of genets. If you take the `aggregateByGenet = FALSE` route, be
 sure to pass your dataset through the `aggregateByGenet()` function (or 
 aggregate to the genet scale using your preferred method) before 
 demographic analysis. 
+
+* `species/site/quad/year/geometry`: These arguments only need to be included if 
+the columns in 'dat' that contain the data for species, site, 
+quadrat, year and geometry of each observation are *different* from the names 
+"Species", "Site", "Quad", "Year, and "geometry".  For example, if the column in 
+your version of 'dat' that contains the species identity of each observation is 
+called 'species_names', then the argument `species = "species_names"` must be 
+included in your call to `trackSpp()`. 
+
+These are all of the possible arguments to `trackSpp()`! 
+
+#### *2.2.* Function Output
+Below is an example of what the output of `trackSpp()` might look like, using 
+the example 'dat' and 'inv' data we've used so far. 
+```{r}
+# datTrackSpp <- trackSpp(dat = dat, inv = inv, 
+#          dorm = 1, 
+#          buff = .05, 
+#          buffGenet = .005, 
+#          clonal = data.frame("Species" = c("Heteropogon contortus", 
+#                                            "Bouteloua rothrockii", 
+#                                            "Ambrosia artemisiifolia", 
+#                                            "Calliandra eriophylla"), 
+#                              "clonal" = c(1,1,0,0)),
+#          aggregateByGenet = TRUE)
+# knitr::kable(head(datTrackSpp))
+```
+
+If you did not allow any species to be clonal (`clonal = 0`) or if 
+`aggregateByGenet = TRUE` in your call to trackSpp(), then your output
+data.frame will have one row for each genet, and is ready for demographic 
+analysis! If your output data.frame is *not* yet aggregated by genet 
+(i.e. you set the `aggregateByGenet` argument to FALSE), then you need to 
+transform your data.frame so that each genet is represented by only one row of 
+data. You can use the `aggregateByGenet()` function from PlantTracker (see this 
+function's documentation for guidance), or your own method of choice. 
+
+You can stop here and proceed to your own analyses using the demographic data 
+you generated, or you can proceed with other PlantTracker functions outlined 
+below for some additional useful data.
+
+### *3* Calculating a Metric of Competition
+It is often useful in demographic analyses to have some idea of the competition 
+(or facilitation) that an individual organism is dealing with. Interactions 
+between individuals can have a profound impact on whether an organism survives 
+and grows. Spatial datasets of plant occurrence allow us to generate an estimate 
+of the interactions an individual plant has with other plants by determining how 
+many other individuals surround each plant. While this isn't a direct measure of
+competition or facilitation, it gives us an estimate that we can include in 
+demographic models.
+
+#### *3.1* Function options and arguments
+The `getNeighbors()` function in PlantTracker calculates this competition 
+estimate for each unique individual in your dataset. A user-specified buffer is 
+drawn around each individual, and then the function counts the number of other 
+plants within this buffer.This function can only be run on a dataset where each 
+unique individual (genet) is represented by only one row of data. If the genet 
+consists of multiple polygons, then they must be aggregated into one sf 
+"MULTIPOLYGON" object. If your dataset has multiple rows for each genet, then 
+you can use the `aggregateByGenet()` function to get it ready to use in 
+`getNeighbors()`. Additionally, `getNeighbors()` requires your dataset to have a 
+column containing a unique identifier for each genet. Across multiple years, 
+that genet must have the same unique identifier. If you are using this function 
+right after `trackSpp()`, your dataset will already have this unique identifier 
+in a column called "trackID".
+
+`getNeighbors()` has several options that allow you 
+to customize how the competition metric is calculated. 
+
+* First, the user can decide how the function 'counts' other plants inside the 
+buffer zone around the focal individual. Option 1) The function will calculate a 
+tally of the number of genets inside the buffer zone. Option 2) The function
+will calculate the proportion of the buffer zone that is occupied by 
+other plants. 
+
+* Second, the user can decide whether the function will calculate a metric of 
+intraspecific competition (only consider other plants in the buffer zone of the 
+same species as the focal individual) or interspecific competition (consider all 
+other plants in the buffer zone, regardless of species).
 
 
