--- a/vignettes/Suggested_plantTracker_Workflow.Rmd
+++ b/vignettes/Suggested_plantTracker_Workflow.Rmd
@@ -460,17 +460,17 @@ These are all of the possible arguments to `trackSpp()`!
 Below is an example of what the output of `trackSpp()` might look like, using 
 the example 'dat' and 'inv' data we've used so far. 
 ```{r}
-# datTrackSpp <- trackSpp(dat = dat, inv = inv, 
-#          dorm = 1, 
-#          buff = .05, 
-#          buffGenet = .005, 
-#          clonal = data.frame("Species" = c("Heteropogon contortus", 
-#                                            "Bouteloua rothrockii", 
-#                                            "Ambrosia artemisiifolia", 
-#                                            "Calliandra eriophylla"), 
-#                              "clonal" = c(1,1,0,0)),
-#          aggregateByGenet = TRUE)
-# knitr::kable(head(datTrackSpp))
+datTrackSpp <- trackSpp(dat = dat, inv = inv,
+         dorm = 1,
+         buff = .05,
+         buffGenet = .005,
+         clonal = data.frame("Species" = c("Heteropogon contortus",
+                                           "Bouteloua rothrockii",
+                                           "Ambrosia artemisiifolia",
+                                           "Calliandra eriophylla"),
+                             "clonal" = c(1,1,0,0)),
+         aggregateByGenet = TRUE)
+knitr::kable(head(datTrackSpp))
 ```
 
 If you did not allow any species to be clonal (`clonal = 0`) or if 
@@ -525,4 +525,89 @@ intraspecific competition (only consider other plants in the buffer zone of the
 same species as the focal individual) or interspecific competition (consider all 
 other plants in the buffer zone, regardless of species).
 
+```{r echo = FALSE, fig.width=6, fig.align = 'center', fig.cap = "**Figure 3.1**: This individual outlined in pink is a focal individual, and the pale pink shows a 10 cm buffer around it. "}
+datComp <- datTrackSpp[datTrackSpp$Year == 1922,]
 
+ggplot(datComp) +
+  geom_sf(data = 
+            sf::st_buffer(datComp[datComp$trackID == "HETCON_1922_6",], .1), 
+          aes(), color = "#CC79A7", fill = "#CC79A7", alpha = .3, lty = 2) +
+  geom_sf(aes(fill = Species)) +
+   geom_sf(data = datComp[datComp$trackID == "HETCON_1922_6",], 
+          aes(), color = "#CC79A7", fill = "#CC79A7", alpha = 0, lwd = 1.5) +
+  xlim(c(0,.5)) +
+  ylim(c(.2,.7)) +
+  xlab("quadrat horizontal edge (m)") +
+  ylab("quadrat vertical edge (m)") +
+  theme_classic() +
+  theme(legend.text = element_text(face = "italic"),
+        plot.margin = margin(1,0,1,0),
+        legend.title = element_blank()) +
+  scale_fill_discrete(type = c( "#009E73", "#F0E442", "#E69F00",  "#56B4E9","#A6A6A6")) +
+ scale_colour_discrete(type = c( "#009E73", "#F0E442","#E69F00",  "#56B4E9", "#A6A6A6")) 
+```
+
+```{r echo = FALSE, warnings = FALSE, fig.width=7, fig.align = 'center', fig.cap = "**Figure 3.2**: The 10cm buffer around the focal individual overlaps with 5 other unique individuals of two species. These overlapping individuals are outlined in dark grey. Using the 'count' method in `getNeighbors()`, we would get an intraspecific competition value of 3, and an interspecific competition value of 5.  "}
+
+st_intersects(st_buffer(datComp[datComp$trackID == "HETCON_1922_6",], .1), datComp)
+countMethod <- datComp[c(3,5,63,67,70),]
+areaMethodTemp <- st_intersection(st_buffer(
+  datComp[datComp$trackID == "HETCON_1922_6",], .1), datComp)
+areaMethod <- areaMethodTemp[st_is(areaMethodTemp, c("POLYGON", "MULTIPOLYGON")),]
+
+ggplot(datComp) +
+  geom_sf(data = 
+            sf::st_buffer(datComp[datComp$trackID == "HETCON_1922_6",], .1), 
+          aes(), color = "#CC79A7", fill = "#CC79A7", alpha = .3, lty = 2) +
+  geom_sf(aes(fill = Species)) +
+  geom_sf(data = datComp[datComp$trackID == "HETCON_1922_6",], 
+          aes(), color = "#CC79A7", fill = "#CC79A7", alpha = 0, lwd = 1.5) +
+  geom_sf(data = countMethod, aes(), alpha = 0, lwd = 1.5) +
+  geom_sf_label(data = countMethod, label = c(1,2,3,4,5), nudge_x = .035, 
+                label.padding = unit(.15, "lines"),
+                label.size = unit(.05,"mm")) +
+  xlim(c(0,.5)) +
+  ylim(c(.2,.7)) +
+  xlab("quadrat horizontal edge (m)") +
+  ylab("quadrat vertical edge (m)") +
+  theme_classic() +
+  theme(legend.text = element_text(face = "italic"),
+        plot.margin = margin(1,0,1,0),
+        legend.title = element_blank()) +
+  scale_fill_discrete(type = c( "#009E73", "#F0E442", "#E69F00",  "#56B4E9","#A6A6A6")) +
+ scale_colour_discrete(type = c( "#009E73", "#F0E442","#E69F00",  "#56B4E9", "#A6A6A6")) 
+```
+
+```{r echo = FALSE, warnings = FALSE, fig.width=7, fig.align = 'center', fig.cap = "**Figure 3.3**: The 10cm buffer around the focal individual overlaps with 5 other unique individuals of two species. The overlapping area is shaded in grey. Using the 'area' method in `getNeighbors()`, we would get an intraspecific competition metric of 0.0454, and an interspecific competition metric of 0.0462.  "}
+areaMethodTemp <- st_intersection(st_buffer(
+  datComp[datComp$trackID == "HETCON_1922_6",], .1), datComp)
+areaMethod <- areaMethodTemp[areaMethodTemp$trackID.1 != "HETCON_1922_6",]
+
+ggplot(datComp) +
+  geom_sf(data = 
+            sf::st_buffer(datComp[datComp$trackID == "HETCON_1922_6",], .1), 
+          aes(), color = "#CC79A7", fill = "#CC79A7", alpha = .3, lty = 2) +
+  geom_sf(aes(fill = Species)) +
+  geom_sf(data = datComp[datComp$trackID == "HETCON_1922_6",], 
+          aes(), color = "#CC79A7", fill = "#CC79A7", alpha = 0, lwd = 1.5) +
+  geom_sf(data = areaMethod, aes(), fill = "#A6A6A6", color = "grey50", alpha = 0.7, lwd = 1.5) +
+  xlim(c(0,.5)) +
+  ylim(c(.2,.7)) +
+  xlab("quadrat horizontal edge (m)") +
+  ylab("quadrat vertical edge (m)") +
+  theme_classic() +
+  theme(legend.text = element_text(face = "italic"),
+        plot.margin = margin(1,0,1,0),
+        legend.title = element_blank()) +
+  scale_fill_discrete(type = c( "#009E73", "#F0E442", "#E69F00",  "#56B4E9","#A6A6A6")) +
+ scale_colour_discrete(type = c( "#009E73", "#F0E442","#E69F00",  "#56B4E9", "#A6A6A6")) 
+
+## basal area of focal individual = 0.004981431 
+## area of buffer 0.06953875 - 0.004981431 =  0.06455732
+## area of interspecific competitors  2.504885e-05 + 9.549092e-04 + 1.952117e-03 + 2.461883e-05 + 2.461883e-05 = 0.002981313
+## area of intraspecific competitors 2.504885e-05 + 9.549092e-04 + 1.952117e-03 = 0.002932075
+## proportion of interspecific competitors 0.002981313 / 0.06455732 = 0.04618087
+## proportion of intraspecific competitors 0.002932075 / 0.06455732 = 0.04541816
+```
+
+Here are the arguments 
