--- a/vignettes/Suggested_plantTracker_Workflow.Rmd
+++ b/vignettes/Suggested_plantTracker_Workflow.Rmd
@@ -270,7 +270,7 @@ ggplot(data = exampleSmall) +
         plot.margin = margin(1,0,1,0),
         legend.title = element_blank()) +
   scale_fill_discrete(type = c("#E69F00", "#A6A6A6", "#009E73"))  +
-  scale_colour_discrete(type = c("#E69F00", "#A6A6A6", "#009E73"))
+  scale_color_discrete(type = c("#E69F00", "#A6A6A6", "#009E73"))
 ```
   
   If you'd like to be more specific and perhaps biologically accurate, you can 
@@ -314,7 +314,7 @@ exampleDat <- grasslandData[grasslandData$Site == "AZ" &
 exampleDatIDsTemp <- exampleDat[exampleDat$Species == "Bouteloua rothrockii",]
 exampleDatIDsTemp <- exampleDatIDsTemp[round(exampleDatIDsTemp$Area,7) %in% round(c( 0.0005471808, 0.0005321236),7),]
  
-exampleDatIDsTemp$ghost <- "polygon location in current year"
+exampleDatIDsTemp$ghost <- "observation from current year"
 exampleBuffed <- st_buffer(exampleDatIDsTemp[round(exampleDatIDsTemp$Area, 7) ==0.0005472,], dist = .10)
 exampleBuffed$Year <- 1922
 exampleBuffed$ghost <- "10 cm buffer"
@@ -324,9 +324,7 @@ ghost <- exampleDatIDsTemp[round(exampleDatIDsTemp$Area, 7) == 0.0005472,]
 ghost$Year <- 1923
 ghost$ghost <- "polygon location in previous year"
 exampleDatIDs <- rbind(exampleDatIDsTemp, ghost, exampleBuffed, exampleBuffedNext )
-exampleDatIDs$labelsX <- c(0.8222548, 0.8988922, 0.8222548, 0.822329, 0.822329)
-exampleDatIDs$labelsY <- c(0.5771712, 0.6037035, 0.5771712, 0.5771496, 0.5771496)
-exampleDatIDs$label <- c("TrackID 1", "TrackID 1", "", "", "")
+
 
 ggplot(data = exampleDatIDs
        ) +
@@ -349,10 +347,9 @@ ggplot(data = exampleDatIDs
         #plot.margin = margin(1,0,1,0),
         legend.title = element_blank()) +
   scale_fill_discrete(type = c("#E69F00", "#009E73", "#A6A6A6")) +
- scale_colour_discrete(type = c("#E69F00", "#009E73", "#A6A6A6")) +
+ scale_color_discrete(type = c("#E69F00", "#009E73", "#A6A6A6")) +
   scale_alpha_discrete(range = c(0, 1, .5)) +
-  scale_linetype_manual(values=c("twodash", "solid", "dotted")) +
-  geom_text(aes(x = labelsX+.04, y = labelsY + .025, label = label), size = 3)
+  scale_linetype_manual(values=c("twodash", "solid", "dotted"))
 ```  
 
 ```{r echo = FALSE, warning= FALSE, fig.width=8, fig.align = 'center', fig.cap = "**Figure 2.3**: With a 3 cm buffer, these polygons in 1922 and 1923 don't quite overlap, so will be identified by trackSpp() as *different* individuals and receive different trackIDs."}
@@ -366,10 +363,6 @@ ghost <- exampleDatIDsTemp[round(exampleDatIDsTemp$Area, 7) ==0.0005472,]
 ghost$Year <- 1923
 ghost$ghost <- "polygon location in previous year"
 exampleDatIDs <- rbind(exampleDatIDsTemp, ghost, exampleBuffed, exampleBuffedNext )
-exampleDatIDs$labelsX <- c(0.8222548, 0.8988922, 0.8222548, 0.822329, 0.822329)
-exampleDatIDs$labelsY <- c(0.5771712, 0.6037035, 0.5771712, 0.5771496, 0.5771496)
-exampleDatIDs$label <- c("TrackID 1", "TrackID 2", "", "", "")
-
 
 
 ggplot(data = exampleDatIDs
@@ -393,10 +386,9 @@ ggplot(data = exampleDatIDs
         #plot.margin = margin(1,0,1,0),
         legend.title = element_blank()) +
   scale_fill_discrete(type = c("#E69F00", "#009E73", "#A6A6A6")) +
- scale_colour_discrete(type = c("#E69F00", "#009E73", "#A6A6A6")) +
+ scale_color_discrete(type = c("#E69F00", "#009E73", "#A6A6A6")) +
   scale_alpha_discrete(range = c(0, 1, .5)) +
-  scale_linetype_manual(values=c("twodash", "solid", "dotted")) +
-  geom_text(aes(x = labelsX+.04, y = labelsY + .025, label = label), size = 3)
+  scale_linetype_manual(values=c("twodash", "solid", "dotted"))
 ```  
 
 * `clonal` This is a Boolean argument (0 or 1) that indicates whether you want 
@@ -454,7 +446,7 @@ sure to pass your dataset through the `aggregateByGenet()` function (or
 aggregate to the genet scale using your preferred method) before 
 demographic analysis. 
 
-* `species/site/quad/year/geometry`: These arguments only need to be included if 
+* `species/site/quad/year/geometry` These arguments only need to be included if 
 the columns in 'dat' that contain the data for species, site, 
 quadrat, year and geometry of each observation are *different* from the names 
 "Species", "Site", "Quad", "Year, and "geometry".  For example, if the column in 
@@ -552,7 +544,7 @@ ggplot(datComp) +
         plot.margin = margin(1,0,1,0),
         legend.title = element_blank()) +
   scale_fill_discrete(type = c( "#009E73", "#F0E442", "#E69F00",  "#56B4E9","#A6A6A6")) +
- scale_colour_discrete(type = c( "#009E73", "#F0E442","#E69F00",  "#56B4E9", "#A6A6A6")) 
+ scale_color_discrete(type = c( "#009E73", "#F0E442","#E69F00",  "#56B4E9", "#A6A6A6")) 
 ```
 
 ```{r echo = FALSE, warnings = FALSE, fig.width=7, fig.align = 'center', fig.cap = "**Figure 3.2**: The 10cm buffer around the focal individual overlaps with 5 other unique individuals of two species. These overlapping individuals are outlined in dark grey. Using the 'count' method in `getNeighbors()`, we would get an intraspecific competition value of 3, and an interspecific competition value of 5.  "}
@@ -583,7 +575,7 @@ ggplot(datComp) +
         plot.margin = margin(1,0,1,0),
         legend.title = element_blank()) +
   scale_fill_discrete(type = c( "#009E73", "#F0E442", "#E69F00",  "#56B4E9","#A6A6A6")) +
- scale_colour_discrete(type = c( "#009E73", "#F0E442","#E69F00",  "#56B4E9", "#A6A6A6")) 
+ scale_color_discrete(type = c( "#009E73", "#F0E442","#E69F00",  "#56B4E9", "#A6A6A6")) 
 ```
 
 ```{r echo = FALSE, warnings = FALSE, fig.width=7, fig.align = 'center', fig.cap = "**Figure 3.3**: The 10cm buffer around the focal individual overlaps with 5 other unique individuals of two species. The overlapping area is shaded in grey. Using the 'area' method in `getNeighbors()`, we would get an intraspecific competition metric of 0.0454, and an interspecific competition metric of 0.0462.  "}
@@ -608,7 +600,7 @@ ggplot(datComp) +
         plot.margin = margin(1,0,1,0),
         legend.title = element_blank()) +
   scale_fill_discrete(type = c( "#009E73", "#F0E442", "#E69F00",  "#56B4E9","#A6A6A6")) +
- scale_colour_discrete(type = c( "#009E73", "#F0E442","#E69F00",  "#56B4E9", "#A6A6A6")) 
+ scale_color_discrete(type = c( "#009E73", "#F0E442","#E69F00",  "#56B4E9", "#A6A6A6")) 
 
 ## basal area of focal individual = 0.004981431 
 ## area of buffer 0.06953875 - 0.004981431 =  0.06455732
@@ -617,46 +609,64 @@ ggplot(datComp) +
 ## proportion of interspecific competitors 0.002981313 / 0.06455732 = 0.04618087
 ## proportion of intraspecific competitors 0.002932075 / 0.06455732 = 0.04541816
 ```
+Below are the arguments in the `getNeighbors()` function. 
 
-Here are the required arguments to `getNeighbors()`: 
+* `dat` An sf data.frame in which each row represents data for a unique 
+individual organism in a unique year. The sf geometry for each row must be 
+either 'MULTIPOLYGON' or 'POLYGON' geometry. In addition to a 'geometry' column, 
+this data.frame must have columns that contain data indicating the site, 
+quadrat, site, and year of each observation. There also must be a column that 
+contains a unique identifying value for each genet in each year. If 'dat' is 
+coming directly from trackSpp()`, this column will be called 'trackID'.  
 
-* `dat` This is an sf data.frame where each row is spatial data for a unique 
-genet in a given year. The function expects a data.frame that has been returned 
-from the `trackSpp()` function including the argument `aggregateByGenet = TRUE`. 
-However, any sf data.frame where each row represents a unique genet in a given 
-year can be used. If your data.frame is not aggregated by genet (some genets are
-represented by multiple rows of data in one year), then you can use the 
-`aggregateByGenet()` function to condense the data.frame so that each row is a 
-unique genet/year combo. The `dat` argument must contain a columns that have 
-data indicating the species, quadrat, year, site, and sf geometry of each 
-location (as described in section 1.1). It also must contain a column that has a 
-unique identifying value for each genet/year combo. This column is called 
-'trackID' in the return of `trackSpp()`. 
+* `buff` This is a single numeric value that indicates the desired width of the 
+'buffer' around the focal individual in which the competitors are to be counted. 
+This value must be in the same units as the spatial information in 'dat'.  
 
-* `buff` This is a numeric value that indicates the width of the buffer around 
-the focal individual within which you want to calculate the competition metric. 
-An example of this 'buffer' is shown in figure 3.1. Make sure this argument is 
-in the same units as the spatial data in `dat`. 
+* `method` This is a character string that must equal either 'count' or 'area'. 
+If `method = "count"`, then the number of individuals in the buffer area will be 
+tallied. If `method = "area"`, then the proportion of the buffer area that is 
+occupied by other individuals will be calculated. 
 
-* `method` This argument is a character value that equals either 'area' or 
-'count', and indicates which method you want to use to calculate the competition 
-metric. If `method = area`, then `getNeighbors()` populates the 'neighbors' 
-column of the output with the proportion of the neighborhood buffer that is 
-occupied by competitors. If `method = count`, then `getNeighbors()` populations 
-the 'neighbors' column with an integer indicating the number of competitors 
-inside the neighborhood buffer. 
+* `compType` This is a character string that must be either 'allSpp' or 
+'oneSpp'. If `compType = "allSpp"`, then a metric of interspecific 
+competition is calculated, meaning that every individual within the buffer 
+around the focal individual is considered, no matter the species. If 
+`compType = "oneSpp"`, then a metric of intraspecific competition is calculated, 
+meaning that only individuals of the same species as the focal individual will 
+be considered when calculating the competition metric. If no value is provided, 
+it will default to "allSpp". 
 
-* `compType` This argument is a character value that equals either 'allSpp' or 
-'oneSpp'. If `compType = allSpp` then the function calculates an interspecific 
-competition metric. This is the default of this function. If 
-`compType = oneSpp`, then the function calculates an intraspecific competition 
-metric. 
-
-* `species/site/quad/year/geometry/trackID`: These arguments only need to be 
-included if the columns in 'dat' that contain the data for species, site, 
-quadrat, year, geometry, and 'trackID' of each observation are *different* from 
-the names "Species", "Site", "Quad", "Year, "geometry", and "trackID".  For 
-example, if the column in your version of 'dat' that contains the species 
-identity of each observation is called 'species_names', then the argument 
+* `trackID/species/quad/year/site/geometry` These arguments only need to be 
+included if the columns in 'dat' that contain the data for trackID, species, 
+site, quadrat, year and geometry of each observation are *different* from the
+names "trackID, "Species", "Site", "Quad", "Year, and "geometry".  For example, 
+if the column in your version of 'dat' that contains the species identity of 
+each observation is called 'species_names', then the argument 
 `species = "species_names"` must be included in your call to `getNeighbors()`. 
 
+#### *3.2.* Function Outputs 
+
+The output of `getNeighbors()` is an sf data.frame that is identical to the 
+input 'dat', but with an additional column called 'neighbors', which contains 
+either an integer value indicating the number of individuals within the buffer 
+area, or a decimal less that 1 that indicates the proportion of the buffer area
+that is occupied by competitors. 
+
+Here's an example of a `getNeighbors()` function call using the resulting data 
+from the example in section *2.2*, as well as the resulting data.frame:  
+```{r}
+datNeighbors <- getNeighbors(dat = datTrackSpp,
+             buff = .15,
+             method = "area",
+             compType = "allSpp")
+
+knitr::kable(head(datNeighbors))
+```
+
+### *3* Next Steps
+At this point, this dataset should be ready for you to use in any applications 
+wish! There are a few additional functions that may help you in your analyses, 
+and these are outlined in this section. 
+
+* recruitment by species-by-plot-by-year
